--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>onao.coffee</groupId>
 	<artifactId>example</artifactId>
-	<version>0.0.5-SNAPSHOT</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<name>example</name>
 	<description>Coffee microservice</description>
 	<properties>
@@ -51,6 +51,11 @@
 			<artifactId>ebean-postgres</artifactId>
 			<version>13.11.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.ebean</groupId>
+			<artifactId>ebean-api</artifactId>
+			<version>13.6.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -81,6 +86,36 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>io.repaint.maven</groupId>
+				<artifactId>tiles-maven-plugin</artifactId>
+				<version>2.22</version>
+				<extensions>true</extensions>
+				<configuration>
+					<tiles>
+						<tile>io.ebean.tile:enhancement:13.6.5</tile>
+					</tiles>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>io.ebean</groupId>
+							<artifactId>querybean-generator</artifactId>
+							<version>13.6.5</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.24</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
