--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>onao.coffee</groupId>
 	<artifactId>example</artifactId>
-	<version>0.0.6-SNAPSHOT</version>
+	<version>0.0.7-SNAPSHOT</version>
 	<name>example</name>
 	<description>Coffee microservice</description>
 	<properties>
@@ -48,12 +48,7 @@
 
 		<dependency>
 			<groupId>io.ebean</groupId>
-			<artifactId>ebean-postgres</artifactId>
-			<version>13.11.1</version>
-		</dependency>
-		<dependency>
-			<groupId>io.ebean</groupId>
-			<artifactId>ebean-api</artifactId>
+			<artifactId>ebean</artifactId>
 			<version>13.6.5</version>
 		</dependency>
 
