Added Feign integration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,15 @@
+spring:
+  application:
+    name: order-service
+#  cloud:
+#    config:
+#      uri:
+#        - http://localhost:8084
 server:
   port: 8083
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
